--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1> Hola mi nombre es Jonathan julio y estoy en camino a ser programador web front end </
+<h1> Hola mi nombre es Jonathan julio y estoy en camino a ser programador web front end </h1>
+
